# hexagonal_architecture

./: Cargo.toml  README.md
.cargo/: config.toml
adapters-notification/: Cargo.toml
adapters-notification/src/: console.rs  lib.rs  sendgrid.rs
adapters-payment/: Cargo.toml
adapters-payment/src/: lib.rs  mock.rs  stripe.rs
adapters-repository/: Cargo.toml
adapters-repository/src/: in_memory.rs  lib.rs  postgres.rs
app/: Cargo.toml
app/src/: main.rs
application/: Cargo.toml
application/src/: lib.rs
docs/: notes.md
domain/: Cargo.toml
domain/src/: lib.rs
